# phoenix-rtos-ports

./: .codespell_ignore  .gitignore  build.sh  build.subr  build_port.sh  load_port_def.sh  port.subr  port_internal.subr  port_manager.py  port_manager_test.py  port_manager_v2.py  ports.mk  prepare_port.sh  requirements.txt
.github/workflows/: ci.yml  lint.yml  port-defs-ci.yml  ports-ci.yml  weekly.yml
azure_sdk/: README.md  build.sh  port.def.sh  toolchain-phoenix.cmake
azure_sdk/patches/: 01_pthread.patch  02_avoid_linking.patch  02_nanosleep.patch  03_avoid_warnings.patch  03_disable_warnings.patch  03_missing_includes.patch  04_umock.patch  05_armv7m7-imxrt106x.patch  05_huge_macros.patch  06_add_void.patch  06_c-utility_utests.patch  07_disable_warnings.patch  08_connection_string.patch  armv7m7-imxrt106x.patch  c-utility.patch  c-utility_running_utests.patch  c-utility_utests.patch  cmake_lists.patch  iothub_client.patch
busybox/: 09-ping-signal.patch  16-syslogd-large-buf.patch  17-watchdog-read-file.patch  21-test.patch  22-ifconfig-ipv6.patch  23-test-cp-copies-large-file.patch  build.sh  port.def.sh
busybox/patches/: 18-telnetd-select-blocking-workaround.patch  19-enable-testcase-logging.patch  20-fix-ash-nofork-interrupted.patch  21-route-include-ip6_route.patch
check/: build.sh
cognit/: 01_include_headers.patch  02_adjust_loglevel.patch  CMakeLists.txt  build.sh
cognit/include/cognit/: base64.h  cJSON.h  cJSON_Utils.h  cognit_config.h  cognit_http.h  faas_parser.h  ip_utils.h  logger.h  offload_fc_c.h  prov_engine_cli.h  serverless_runtime.h  serverless_runtime_client.h  serverless_runtime_context.h  sr_parser.h
cognit/src/: base64.c  cJSON.c  cJSON_Utils.c  cognit_http.c  faas_parser.c  ip_utils.c  offload_fc_c.c  prov_engine_cli.c  serverless_runtime_client.c  serverless_runtime_context.c  sr_parser.c
coreMQTT/: CMakeLists.txt  build.sh  port.def.sh
coremark/: 01-core_portme.patch  build.sh  core-portme.mak  port.def.sh
coremark_pro/: build.sh  port.def.sh
coremark_pro/make/: aarch64a53-phoenix.mak  arm-phoenix.mak  i386-pc-phoenix.mak  phoenix-gcc.mak  riscv64-phoenix.mak  sparc-phoenix.mak
coremark_pro/patches/: 01-small_stack_size.patch  01-stack_size.patch
curl/: build.sh  port.def.sh
dropbear/: build.sh  localoptions.h  port.def.sh
dropbear/patch/: 0001-ps_dcsap_login.patch
dropbear/patches/: 0001-ps_dcsap_login.patch  0002-select_blocking_workaround.patch  0003-autoconf_phoenix.patch
ethtool/: build.sh
ethtool/patches/: 01-replace-symbols.patch
fs_mark/: build.sh  port.def.sh
fs_mark/patch/: fs_mark.patch  fs_mark_h.patch  makefile.patch
fs_mark/patches/: Makefile.patch  fs_mark.patch  fs_mark_h.patch  lib_timing.patch
fsbench/: build.sh
fsbench/fs_mark/: Makefile  fs_mark  fs_mark.c  lib_timing.c
fsbench/fstest/: Makefile  fstest  fstest.c
heatshrink/: build.sh  port.def.sh
jansson/: build.sh  port.def.sh
joe/: build.sh
joe/patches/: 01-joe.patch  02-malloc-zero-returns-null.patch
libevent/: build.sh  port.def.sh
libevent/patches/: 04-poll.patch
libpng/: build.sh
libpng/patches/: 01-Makefile.am.patch
lighttpd/: build.sh  port.def.sh
lighttpd/patches/: 01-fdevent.patch  02-fdevent.patch  02-http-header-glue.patch  02-http_date.patch  03-http-header-glue.patch  03-http_date.patch  03-static-wstunnel.patch  (+5 more)
lsb_vsx/: README.md  build.sh
lua/: build.sh  checksums.sha256  luaconf_local.h  port.def.sh
lwip-tests/: build.sh
lzo/: build.sh  port.def.sh
mbedtls/: build.sh  port.def.sh
micropython/: README.md  build.sh  port.def.sh
openiked/: build.sh  port.def.sh
openssl/: 30-phoenix.conf  30-phoenix.conf.jinja  build.sh  openssl-common.subr  port-openssl111.def.sh  port-openssl3.def.sh  render-config.py
openssl111/: 30-phoenix.conf  build.sh  port.def.sh
openssl3/: port.def.sh
openvpn/: 02-openssl3-hotfix.patch  build.sh  port.def.sh
os_test/: port.def.sh  run_tests.sh  skipped.list
pcre/: build.sh  port.def.sh
picocom/: build.sh  port.def.sh
png/: build.sh
port_mgmt/: port.subr  port_build.sh  port_def_to_json.sh  port_internal.subr  port_manager.py  port_manager_test.py  port_prepare.sh
smolrtsp/: build.sh  port.def.sh
sscep/: build.sh  port.def.sh
tinyx/: build.sh
wamr/: build.sh  port.def.sh
wpa_supplicant/: build.sh  port.def.sh
x11/: build.sh
x264/: build.sh
zlib/: build.sh  port.def.sh
(+371 files in other folders)
